# Diba

./: .gitignore  ARCHITECTURE.md  README.md  benchmark_ephemeris_scalar_vs_vector.py  chart_calculator.py  demo_chart.py  migrate_raavi.py  panchanga_engine.py  pyproject.toml  raavi_ephemeris.py  raavi_ephemeris_vector.py  run_chart.py  run_mehran_chart.py  run_mehran_chart_sidereal.py  test_pyjhora_contract_manual.py
.github/workflows/: ci.yml
logic/: __init__.py  aspects.py  dashas.py  maitri.py  nakshatras.py  shadbala.py  strengths.py  transits.py  varga_engine.py
tests/: test_aspects_scalar_and_vector.py  test_dashas.py  test_ephemeris_pyjhora_contract.py  test_maitri.py  test_nakshatras.py  test_panchanga_advanced.py  test_panchanga_end_times_basic.py  test_panchanga_engine_basic.py  test_panchanga_events_cover_day.py  test_rahu_ketu_vector.py  test_shadbala.py  test_transits.py  test_varga_parity.py  test_vector_adapter_parity.py
